@@ -1,6 +1,13 @@
+2010-04-05  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-07-02
+	* improvements to jet_inspect_profiles_x
+	* add parameter 'opath' to jet_inspect_histos_x
+	* add parameter 'opath' to jet_inspect_graphs_x
+
 2010-04-01  Andreas Hinzmann  <hinzmann@cern.ch>
 
-    * change 'buh' error message
+	* change 'buh' error message
 
 2010-03-31  Philipp Schieferdecker  <philipp.schieferdecker@cern.ch>
 
